# agentic-workflow-practice

./: .env  Makefile  README.md  main.py  pyproject.toml
app/: celery_app.py  fastapi-main.py  main.py  methods.py  schema.py  utils.py
app/modules/research/: methods.py  prompt.py  schema.py  tasks.py
app/utils/: openai.py  tavily.py
